@@ -1,7 +1,7 @@
 DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
 DEPEND=media-libs/libsdl[sound,video] media-libs/sdl-mixer[vorbis] media-libs/sdl-image[png] media-libs/sdl-ttf
 DESCRIPTION=The classic memory game with some new life
-EAPI=2
+EAPI=5
 HOMEPAGE=http://www.happypenguin.org/show?Concentration
 KEYWORDS=amd64 ppc x86
 LICENSE=GPL-2
@@ -9,4 +9,4 @@ RDEPEND=media-libs/libsdl[sound,video] media-libs/sdl-mixer[vorbis] media-libs/s
 SLOT=0
 SRC_URI=mirror://gentoo/concentration-1.2.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	games	bc8839608d26ccd57ca4f2f01c67460f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=19a11d5041f1963ad7bf18a8dd5a7eba
+_md5_=cdb13438d45962f33570658b8dfccbfc
