@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/concentration
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/concentration/ChangeLog,v 1.13 2014/05/15 16:50:04 ulm Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/concentration/ChangeLog,v 1.14 2015/02/18 20:20:08 tupone Exp $
+
+  18 Feb 2015; Tupone Alfredo <tupone@gentoo.org> concentration-1.2-r1.ebuild:
+  EAPI 5
 
   15 May 2014; Ulrich Müller <ulm@gentoo.org> concentration-1.2-r1.ebuild:
   Fix USE dependency on media-libs/libsdl, "audio" USE flag was renamed to
